--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,23 @@
 # Test against this version of Node.js
 environment:
-matrix:
-#node.js
-- nodejs_version:"6"
+  matrix:
+  # node.js
+  - nodejs_version: "6"
 
-#Install scripts. (runs after repo cloning)
+# Install scripts. (runs after repo cloning)
 install:
-#Get the latest stale version of Node.js or io.js
-ps: Install-Product node $env:nodejs_version
-#install modules
-npm install
+  # Get the latest stable version of Node.js or io.js
+  - ps: Install-Product node $env:nodejs_version
+  # install modules
+  - npm install
 
-#post-install test scripts.
+# Post-install test scripts.
 test_script:
-# Output useful info for debugging.
-node --version
-npm --version
+  # Output useful info for debugging.
+  - node --version
+  - npm --version
+  # run tests
+  - npm test
 
-#run tests
-npm test
-
-#Don't acutally build.
+# Don't actually build.
 build: off
